# sycret

./: .gitignore  .pre-commit-config.yaml  404.html  Cargo.toml  README.md  dev-requirements.txt  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.cargo/: config.toml
.github/workflows/:  pythonpublish-linux.yml  benches.yml  codeql-analysis.yml  docs.yml  python-ci.yml  pythonpublish-linux.yml  rust-ci.yml  tests.yml
benches/: batch.rs  bench_eq.rs  bench_le.rs
docs/: index.md  publish.md  python.md  rust.md
publish/: index.html
python/: index.html
rust/: index.html
search/: search_index.json
src/: abstract.rs  dpf.rs  eq.rs  le.rs  lib.rs  stream.rs  utils.rs
src/fss/: dif.rs  dpf.rs  mod.rs
sycret/: __init__.py  abstract.py  eq.py  fss.py  le.py  utils.py
sycret/sycret/: __init__.py  ffi.py
test/: README.md  test_eq.py  test_le.py
tests/: README.md  test_eq.rs  test_le.rs
tests/fss/: test_dif.rs  test_dpf.rs
