[package]
name = "sycret"
version = "0.1.2"
authors = ["Pierre Tholoniat"]
edition = "2018"
license = "Apache-2.0"
repository = ""
homepage = ""
readme = "README.md"

[dependencies]
maturin = "0.8.2"
aesni = "0.10.0"
rand = "0.7.3"
rayon = "1.5.0"

[lib]
name = "sycret"
crate-type = ["cdylib", "rlib"]

[package.metadata.maturin]
maintainer = "Pierre Tholoniat"
maintainer-email = "pierre@tholoniat.com"
requires-dist = ["numpy>=1", "cffi>=1", "pycparser>=2"]
requires-python=">=3.6"

