[package]
name = "sycret"
version = "0.2.1"
authors = ["Pierre Tholoniat"]
edition = "2018"
license = "Apache-2.0"
repository = ""
homepage = ""
readme = "README.md"

[dependencies]
maturin = "0.8.2"
aes = "0.7.4"
rand = "0.7.3"
rayon = "1.5.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_eq"
harness = false

[[bench]]
name = "bench_le"
harness = false


[lib]
name = "sycret"
crate-type = ["cdylib", "rlib"]
bench = false

[package.metadata.maturin]
maintainer = "Pierre Tholoniat"
maintainer-email = "pierre@tholoniat.com"
requires-dist = ["numpy>=1", "cffi>=1", "pycparser>=2"]
requires-python=">=3.6"

