[build-system]
requires = ["maturin"]
build-backend = "maturin"

[tool.maturin]
bindings = "cffi"
manylinux = "2010"

[tool.isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88
force_single_line = True
remove_redundant_aliases = True
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY, LOCALFOLDER
default_section = THIRDPARTY
lines_between_types = 0
force_sort_within_sections = True
import_heading_future = future
import_heading_stdlib = stdlib
import_heading_thirdparty = third party
ignore_comments = False
honor_noqa = True