[build-system]
requires = ["maturin>=0.11,<.12"]
build-backend = "maturin"

[tool.maturin]
bindings = "cffi"
manylinux = "2010"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true 
ensure_newline_before_comments = true 
line_length = 88
force_single_line = true 
remove_redundant_aliases = true 
sections = ['FUTURE','STDLIB','THIRDPARTY','FIRSTPARTY', 'LOCALFOLDER']
default_section = 'THIRDPARTY'
lines_between_types = 0
force_sort_within_sections = true 
import_heading_future = 'future'
import_heading_stdlib = 'stdlib'
import_heading_thirdparty = 'third party'
ignore_comments = false
honor_noqa = true
